# skillsmp

./: .gitignore  README.md  pyproject.toml
src/skillsmp/: __init__.py
tests/: conftest.py  test_skillsmp.py
