[project]
name = "skillsmp"
version = "1.0.0"
description = "Search the SkillsMP marketplace for agent skills"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Colin Mason", email = "masonc789@gmail.com" },
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/masonc15/skillsmp"
Issues = "https://github.com/masonc15/skillsmp/issues"

[project.scripts]
skillsmp = "skillsmp:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
